tests/typing/faulty_blobs.sy
A :: blob {
    a: int,
    b: int?,
}

start :: fn do
    c :: A {
        a: 1.0,
        b: nil,
    }
    c.a
    c.abc
    A {
        a: 1.0
    }
end
// error: $Mismatch { got: Type::Float, expected: Type::Int }
// error: $Mismatch { got: Type::Float, expected: Type::Int }
